--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,1 +1,10 @@
+<link rel="stylesheet" href="Style.css">
 <h1> hello woiiiiirld! </h1>
+<h3> This picture ugwy </h2>
+<h2> UWU </h3>
+<body>
+    <img src = "https://scontent.faal2-1.fna.fbcdn.net/v/t1.0-9/13892126_1805774462976203_4251759293821616268_n.jpg?_nc_cat=110&_nc_oc=AQmH5ZQv6tPETw4nmMybosVJVetQhqesiZaOkwZ-G_3euv7TIK858m4WO806tLXK4QQ&_nc_ht=scontent.faal2-1.fna&oh=6f270045d204d633b9bb457e2d1119d7&oe=5E5CD9ED">
+    <p>Hej! Mit navn er Grønne og jeg er næsten 19 år gammel og går på EUD fordi jeg er dum og vil spilde min tid på at trykke på et tastertur hele dagen lang resten af mit liv :)</p>
+    <a href = "https://www.facebook.com/profile.php?id=100006309993830"> facebook </a>
+
+</body>
