--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="Style.css">
-<h1 class = "text"> hello woiiiiirld! </h1>
+<h1 class = "text"> About me OwO! </h1>
 <h2 class = "text"> This picture ugwy </h2>
 <h3 class = "text"> UWU </h3>
 <body>
@@ -7,4 +7,4 @@
     <p class = "text">Hej! Mit navn er Grønne og jeg er næsten 19 år gammel og går på EUD fordi jeg er dum og vil spilde min tid på at trykke på et tastertur hele dagen lang resten af mit liv :)</p>
     <a href = "https://www.facebook.com/profile.php?id=100006309993830">  facebook </a>
 
-</body>/
+</body>
