--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="Style.css">
+<script src = "script.js"></script>
+
 <h1 class = "text"> About me OwO! </h1>
 <h2 class = "text"> This picture ugwy </h2>
 <h3 class = "text"> UWU </h3>
@@ -6,5 +8,6 @@
     <img src = "https://scontent.faal2-1.fna.fbcdn.net/v/t1.0-9/13892126_1805774462976203_4251759293821616268_n.jpg?_nc_cat=110&_nc_oc=AQmH5ZQv6tPETw4nmMybosVJVetQhqesiZaOkwZ-G_3euv7TIK858m4WO806tLXK4QQ&_nc_ht=scontent.faal2-1.fna&oh=6f270045d204d633b9bb457e2d1119d7&oe=5E5CD9ED">
     <p class = "text">Hej! Mit navn er Grønne og jeg er næsten 19 år gammel og går på EUD fordi jeg er dum og vil spilde min tid på at trykke på et tastertur hele dagen lang resten af mit liv :)</p>
     <a href = "https://www.facebook.com/profile.php?id=100006309993830">  facebook </a>
+    <button id="ChangeTekstButton" onclick="ChangeTheButtonTekst()"><p class = "ChangeTekstButton">Your mom</p></button>
 
 </body>
