--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -5,9 +5,18 @@
 <h2 class = "text"> This picture ugwy </h2>
 <h3 class = "text"> UWU </h3>
 <body>
-    <img src = "https://scontent.faal2-1.fna.fbcdn.net/v/t1.0-9/13892126_1805774462976203_4251759293821616268_n.jpg?_nc_cat=110&_nc_oc=AQmH5ZQv6tPETw4nmMybosVJVetQhqesiZaOkwZ-G_3euv7TIK858m4WO806tLXK4QQ&_nc_ht=scontent.faal2-1.fna&oh=6f270045d204d633b9bb457e2d1119d7&oe=5E5CD9ED">
+    <img id="MyPicture" src = "https://scontent.faal2-1.fna.fbcdn.net/v/t1.0-9/13892126_1805774462976203_4251759293821616268_n.jpg?_nc_cat=110&_nc_oc=AQmH5ZQv6tPETw4nmMybosVJVetQhqesiZaOkwZ-G_3euv7TIK858m4WO806tLXK4QQ&_nc_ht=scontent.faal2-1.fna&oh=6f270045d204d633b9bb457e2d1119d7&oe=5E5CD9ED">
     <p class = "text">Hej! Mit navn er Grønne og jeg er næsten 19 år gammel og går på EUD fordi jeg er dum og vil spilde min tid på at trykke på et tastertur hele dagen lang resten af mit liv :)</p>
     <a href = "https://www.facebook.com/profile.php?id=100006309993830">  facebook </a>
+    <br>
     <button id="ChangeTekstButton" onclick="ChangeTheButtonTekst()"><p class = "ChangeTekstButton">Your mom</p></button>
+    <button id="destroyMe" onclick="destroyMe()">Destroy Me</button>
+    <button id="reviveMe" onclick="reviveMe()">Revive Me</button>
+    <button id="addText" onclick="addText()">Click for me to say Hey!</button>
+    <button id="removeText" onclick="removeText()">Change button beside me to YO!</button>
+    <br>
+    <input id="textField" type="text">
+    <button id="textFieldButton" onClick="checkTextField()">If you have written "YO" in text field, click this button!</button>
+
 
 </body>
