--- a/HTML/EPIC WEBSITE/EPICWEBSITE.HTML
+++ b/HTML/EPIC WEBSITE/EPICWEBSITE.HTML
@@ -8,9 +8,32 @@
         <div class = "header">Header</div>
         <img id="picture" src = "https://universe-meeps.leagueoflegends.com/v1/assets/images/xayah-splash.jpg">
         <div class = "content">
-            <h1>Xayah</h1>
-            <h2>The Rebel</h2>
-            Content
+            <h1 class = "white">Xayah</h1>
+            <h3 class = "yellow">The Rebel</h3>
+            <br>
+            <p>Deadly and precise, Xayah is a vastayan revolutionary waging a personal war to save her people. She uses her speed, guile, and razor-sharp feather blades to cut down anyone who stands in her way. Xayah fights alongside her partner and lover, Rakan, to protect their dwindling tribe, and restore their race to her vision of its former glory.</p>
+            <br>
+            <p>As a child, Xayah loved listening to her father sing the ancient folk-hymns about vastayan heroes. The haunting melodies transported her to a long-forgotten time, when the spirit realm danced freely throughout the physical world. But, with every new generation, humans encroached further into the Lhotlan tribelands, disrupting the raw, chaotic essence of Ionia for their own purposes. Unwilling to stand by and watch her kind fade, Xayah ignored the decrees of her people and set out to reason with the humans.</p>
+            <br>
+            <p>She ventured into villages beyond her secluded tribal home, and learned how little she knew of the outside world. A group of poverty-stricken villagers mobbed her, some of them trying to steal her feathers as priceless trophies. Others were fearful of her strange appearance and summoned the authorities, forcing her to defend herself. Xayah’s attackers were soon taught the dangers of getting in her way, as she skewered them with her lethal quills.</p>
+            <br>
+            <p>Dismayed, she returned to her home, only to discover that her tribe, including her father, was missing without a trace. An ancient vastayan temple had been tainted by unnatural shadow magic, disrupting its connection to the spirit realm. Xayah destroyed the temple in order to dispel the corruption. Almost instantly, magic flowed back into the surrounding lands. It was a beautiful sight, but her tribe was still nowhere to be found.</p>
+            <br>
+            <p>After years spent flitting in and out of the most fortified strongholds and leaving a trail of bodies in her wake, she became known as “The Violet Raven.” She lived alone, focused only on the next mission, and the next step toward freedom for her kind.</p>
+            <br>
+            <p>But then she met another vastayan who would change her life forever. As she entered the remote mountain town of Vlonqo in search of a stolen vastayan artifact, she was struck by the strange sight of a braying crowd of excitable humans. Onstage before them stood a preening, flamboyant performer, a veritable golden peacock, who sang old vastayan songs for his captivated audience. As he finished his show with a dazzling array of cheap tricks—as Xayah saw them—the crowd erupted and chanted his name: “Rakan.” He took a theatrical bow. She dismissed him as a buffoon.</p>
+            <br>
+            <p>Xayah willed herself to ignore the entertainer, and completed her mission. She made her escape, which she had to admit had become far easier thanks to the buffoon’s distraction of Vlonqo’s inhabitants.</p>
+            <br>
+            <p>Despite vowing never to see this “Rakan” again, she couldn’t seem to get him off her mind. It was a strange and complicated feeling; there was a lightness to his spirit that she found aggravatingly alluring.</p>
+            <br>
+            <p>As she left town, Xayah was preoccupied by these strange thoughts, leaving her momentarily distracted to an ambush from a group of mercenaries. She had been expecting a fight, so she was glad to get her feathers bloody. A good brawl seemed the perfect antidote for useless diversions and unwanted feelings.</p>
+            <br>
+            <p>That was when Rakan made his grand entrance.</p>
+            <br>
+            <p>Xayah insisted she didn’t need the swaggering vastayan’s help. Rakan insisted he didn’t care—he just didn’t want to miss the party. Through the course of the fight, Rakan proved an unorthodox, but surprisingly dauntless and effective, ally. He leapt and pirouetted through the attackers who couldn’t take their eyes off him, providing Xayah ample time to strike them down with devastating accuracy.</p>
+            <br>
+            <p>In spite of her protestations, Rakan continued to follow Xayah. Over time, she grew to welcome his company and—though she was initially loath to admit it—the world didn’t feel so broken and lonely. They became inseparable, with her passion for the vastayan cause infecting the showboating battle-dancer. She has adapted to his free-spirited ways, utilizing the chaos Rakan creates as perfectly timed distractions. Together, they fight to release Ionia’s abundant flow of magic so that the vastaya might thrive once again.</p>
         </div>
         <div class = "footer">Footer</div>
     </div>
