Computer Teknologi Projekt Start

--- a/HTML/EPIC WEBSITE/EPICWEBSITE.HTML
+++ b/HTML/EPIC WEBSITE/EPICWEBSITE.HTML
@@ -11,6 +11,11 @@
             <h1 class = "white">Xayah</h1>
             <h3 class = "yellow">The Rebel</h3>
             <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <p>Deadly and precise, Xayah is a vastayan revolutionary waging a personal war to save her people. She uses her speed, guile, and razor-sharp feather blades to cut down anyone who stands in her way. Xayah fights alongside her partner and lover, Rakan, to protect their dwindling tribe, and restore their race to her vision of its former glory.</p>
             <br>
             <p>As a child, Xayah loved listening to her father sing the ancient folk-hymns about vastayan heroes. The haunting melodies transported her to a long-forgotten time, when the spirit realm danced freely throughout the physical world. But, with every new generation, humans encroached further into the Lhotlan tribelands, disrupting the raw, chaotic essence of Ionia for their own purposes. Unwilling to stand by and watch her kind fade, Xayah ignored the decrees of her people and set out to reason with the humans.</p>
@@ -34,7 +39,23 @@
             <p>Xayah insisted she didn’t need the swaggering vastayan’s help. Rakan insisted he didn’t care—he just didn’t want to miss the party. Through the course of the fight, Rakan proved an unorthodox, but surprisingly dauntless and effective, ally. He leapt and pirouetted through the attackers who couldn’t take their eyes off him, providing Xayah ample time to strike them down with devastating accuracy.</p>
             <br>
             <p>In spite of her protestations, Rakan continued to follow Xayah. Over time, she grew to welcome his company and—though she was initially loath to admit it—the world didn’t feel so broken and lonely. They became inseparable, with her passion for the vastayan cause infecting the showboating battle-dancer. She has adapted to his free-spirited ways, utilizing the chaos Rakan creates as perfectly timed distractions. Together, they fight to release Ionia’s abundant flow of magic so that the vastaya might thrive once again.</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a id="XayahStoryButton" href="https://universe.leagueoflegends.com/en_US/story/xayah-color-story/" class="button">READ XAYAH'S STORY</a>
         </div>
-        <div class = "footer">Footer</div>
+        <div class = "footer">Footer
+
+        </div>
     </div>
 </body>
